# rust-serverless

./: Cargo.toml  LICENSE  package-lock.json  package.json  payload.json  serverless.yaml
cognito-sync/: Cargo.toml
cognito-sync/src/: main.rs
