[package]
name = "cognito-sync"
version = "0.1.0"
authors = ["Marek Majdak <marek.majdak@sufrago.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.21"
lambda_http = "0.1.1"
lambda_runtime = "0.2.1"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.48"
simple_logger = "1.6.0"

[[bin]]
name = "cognito-sync"
path = "src/main.rs"